# openclaw-ptt-client

./: .gitignore  ANALYSIS-GatewayPipelineResilience.md  ANALYSIS-STT-TTS-CONFIG.md  AUDIT-CONFIG-RECONFIG.md  CONFIG-PIPELINE-REVIEW.md  Directory.Build.props  MULTI_GATEWAY_ANALYSIS.md  OpenClawPTT.csproj  README.md  analysis-llm-pipeline.md  analysis-stt-pipeline.md  analysis-tts-pipeline.md  openclaw-ptt.sln  pipeline-trace.md  tts_service.py
.claude/: settings.local.json
analysis/: TTS_PIPELINE_ANALYSIS.md
scripts/: abstractions.py  engine.py  pyproject.toml  service.py  tts_service.py
scripts/tests/: conftest.py  test_abstractions.py  test_engine.py  test_service.py
src/: AgentReplyFormatter.cs  AppConfig.cs  AudioRecorder.cs  ConfigManager.cs  ConsoleUi.cs  GatewayClient.cs  GroqTranscriber.cs  Program.cs
src/DebugTest/: Program.cs
src/KeyboardListening/: GlobalHotkeyHookFactory.cs  HotkeyMapping.cs  IGlobalHotkeyHook.cs  LinuxEvdevHotkeyHook.cs  MacOsHotkeyHook.cs  WindowsHotkeyHook.cs
src/OpenClawPTT/: OpenClawPTT.csproj  test-conversation-sample.txt  test-summary-sample.txt
src/Services/: AudioPlayerService.cs  AudioResponseHandler.cs  AudioService.cs  ConfigurationService.cs  GatewayService.cs  InputHandler.cs  ToolDisplayHandler.cs
src/TTS/: ITextToSpeech.cs  TtsService.cs
src/Transcriber/: OpenAiTranscriberAdapter.cs
src/VisualFeedback/: NoVisualFeedback.cs  VisualFeedbackFactory.cs  WindowsVisualFeedback.cs
tests/OpenClawPTT.Tests/: .gitignore  AgentReplyFormatterTests.cs  AppRunnerStabilityTests.cs  AppRunnerTests.cs  ConsoleUiTests.cs  (+29 more)
(+537 files in other folders)
